Add new version

--- a/index.html
+++ b/index.html
@@ -1,116 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Resume Generator</title>
 </head>
-
 <body>
+    <div id="auth-container">
+        <h1>Resume Generator</h1>
+        <p>By Ankit Narang</p>
+        <div id="login-form">
+            <h2>Login</h2>
+            <input type="email" id="login-email" placeholder="Email" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button onclick="login()">Login</button>
+            <p>Don't have an account? <a href="#" onclick="toggleForms()">Sign up</a></p>
+        </div>
+        <div id="signup-form" style="display: none;">
+            <h2>Sign Up</h2>
+            <input type="email" id="signup-email" placeholder="Email" required>
+            <input type="password" id="signup-password" placeholder="Password" required>
+            <button onclick="signup()">Sign Up</button>
+            <p>Already have an account? <a href="#" onclick="toggleForms()">Login</a></p>
+        </div>
+    </div>
 
-
-    <div class="container" id="cv-form">
-        <h1 class="text-center my-2">Resume Generator</h1>
-        <P class="text-center"> By Ankit Narang </P>
+    <div id="cv-form" style="display: none;">
+        <h1>Resume Generator</h1>
+        <p>By Ankit Narang</p>
         <div class="row">
-            <div class="col-md-6">
-                <h3 class="heading1">Professional Information</h3>
-
+            <div class="column">
+                <h3>Professional Information</h3>
                 <div class="form-group">
                     <label for="nameField">Your Name</label>
-                    <input type="text" id="nameField" placeholder="Enter here" class="form-control" />
+                    <input type="text" id="nameField" placeholder="Enter here" />
                 </div>
                 <div class="form-group">
                     <label for="contactField">Your Contact</label>
-                    <input type="text" id="contactField" placeholder="Enter here" class="form-control" />
+                    <input type="text" id="contactField" placeholder="Enter here" />
                 </div>
                 <div class="form-group">
                     <label for="addressField">Your Address</label>
-                    <textarea id="addressField" placeholder="Enter here" class="form-control" rows="5"></textarea>
+                    <textarea id="addressField" placeholder="Enter here" rows="5"></textarea>
                 </div>
-                <p class="text-secondary my-3">Important links</p>
+                <p class="text-secondary">Important links</p>
                 <div class="form-group">
                     <label for="fbField">Facebook</label>
-                    <input type="text" id="fbField" placeholder="Enter here" class="form-control" />
+                    <input type="text" id="fbField" placeholder="Enter here" />
                 </div>
                 <div class="form-group">
                     <label for="instaField">Instagram</label>
-                    <input type="text" id="instaField" placeholder="Enter here" class="form-control" />
+                    <input type="text" id="instaField" placeholder="Enter here" />
                 </div>
                 <div class="form-group">
                     <label for="linkedField">LinkedIn</label>
-                    <input type="text" id="linkedField" placeholder="Enter here" class="form-control" />
+                    <input type="text" id="linkedField" placeholder="Enter here" />
                 </div>
-
             </div>
-            <div class="col-md-6">
-                <br>
-
-
-                <div class="form-group mt-2">
-                    <label for="">Objective</label>
-                    <textarea id="objectiveField" placeholder="Enter here" class="form-control" rows="5"></textarea>
+            <div class="column">
+                <div class="form-group">
+                    <label for="objectiveField">Objective</label>
+                    <textarea id="objectiveField" placeholder="Enter here" rows="5"></textarea>
                 </div>
-                <div class="form-group mt-2 " id="we">
+                <div class="form-group" id="we">
                     <label for="">Work Experience</label>
-                    <textarea placeholder="Enter here" class="form-control weField" rows="3"></textarea>
+                    <textarea placeholder="Enter here" class="weField" rows="3"></textarea>
+                    <div class="buttonContainer">
+                        <button onclick="addNewWEField()">Add</button>
+                    </div>
                 </div>
-                <!-- New text area  -->
-                <div class="container text-center mt-2" id="weAddButton">
-                    <button onclick="addNewWEField()" class="btn btn-primary btn-sm">Add</button>
-                </div>
-
-                <div class="form-group mt-2" id="aq">
+                <div class="form-group" id="aq">
                     <label for="">Academic Qualification</label>
-                    <textarea placeholder="Enter here" class="form-control eqField" rows="3"></textarea>
+                    <textarea placeholder="Enter here" class="eqField" rows="3"></textarea>
+                    <div class="buttonContainer">
+                        <button onclick="addNewAQField()">Add</button>
+                    </div>
                 </div>
-                <!-- New text area  -->
-                <div class="container text-center mt-2" id="aqAddButton">
-                    <button onclick="addNewAQField()" class="btn btn-primary btn-sm">Add</button>
-                </div>
-
-
             </div>
         </div>
-        <div class="container text-center mt-3">
-            <button onclick="generateCV()" class="btn btn-primary btn-lg">GENERATE</button>
+        <div class="buttonContainer">
+            <button onclick="generateCV()">GENERATE CV</button>
         </div>
     </div>
-    <!-- CV TEMPLATE  -->
 
-    <div class="container" id="cv-template">
+    <div id="cv-template" style="display: none;">
         <div class="row">
-            <div class="col-md-4 text-center py-5 background">
-                <!-- first coloumn -->
-                <img src="images.png" alt="image" class="img-fluid myimg">
-                <!-- width of image is equal to col. 4 -->
+            <div class="column">
+                <img src="https://via.placeholder.com/200" alt="profile image" class="img-fluid myimg">
                 <div class="container">
-                    <p id="nameT1">
-                        Ankit Narang
-                    </p>
-                    <p id="contactT">
-                        +91-7668484155
-                    </p>
-                    <p id="addressT">
-                        4/122 raksha puram
-                    </p>
-                    <hr>
+                    <p id="nameT1"></p>
+                    <p id="contactT"></p>
+                    <p id="addressT"></p>
+                    <hr />
                     <p><a id="fbT" href="#1"></a></p>
                     <p><a id="instaT" href="#2"></a></p>
                     <p><a id="linkedT" href="#3"></a></p>
                 </div>
             </div>
-            <div class="col-md-8 py-5">
-
-                <!-- second coloumn  -->
-                <h1 id="nameT2" class="text-center" style="font-weight:900">ANKIT NARANG</h1>
-
-                <!-- objective card -->
+            <div class="column">
+                <h1 id="nameT2" class="text-center" style="font-weight:980"></h1>
                 <div class="card mt-4">
                     <div class="card-header background">
                         <h3>Objective</h3>
@@ -119,17 +108,12 @@
                         <p id="objectiveT"></p>
                     </div>
                 </div>
-                <!-- work Experience -->
                 <div class="card mt-4">
                     <div class="card-header background">
                         <h3>Work Experience</h3>
                     </div>
                     <div class="card-body">
-                        <ul id="weT">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul id="weT"></ul>
                     </div>
                 </div>
                 <div class="card mt-4">
@@ -137,28 +121,16 @@
                         <h3>Academic Qualification</h3>
                     </div>
                     <div class="card-body">
-                        <ul id="aqT">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ul id="aqT"></ul>
                     </div>
                 </div>
                 <div class="container mt-3 text-center">
-                    <button id="buttonpdf" onclick="printCV()" class="btn background">
-                        PRINT
-                    </button>
+                    <button onclick="printCV()" id="printBtn">Print CV</button>
                 </div>
-
             </div>
         </div>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
